--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   },
   "homepage": "https://github.com/evproyectos/rest_api_express_mongo#readme",
   "dependencies": {
-    "dotenv": "^16.4.5",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.0",
+    "dotenv": "^16.4.5",
     "nodemon": "^3.1.0"
   },
   "devDependencies": {
